<resources>
    <string name="app_name">EE_101</string>
    <string name="details_of_scholarship">Details of Scholarship</string>
    <string name="scholarship_name">SCHOLARSHIP NAME</string>
    <string name="opening_date">OPENING DATE</string>
    <string name="closing_date">ClOSING DATE</string>
    <string name="url">URL</string>
    <string name="about_schorlarship">Requirements</string>
    <string name="scholarships">SCHOLARSHIPS</string>
    <string name="subjects">Subjects</string>
    <string name="subject1">Subject1</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">BUTTON</string>
    <string name="button3">Button</string>
    <string name="add_subject">ADD SUBJECT</string>
    <string name="add_notes">ADD NOTES</string>
    <string name="subject_1">Subject 1</string>
    <string name="list">List</string>
    <string name="todo">TODO</string>
    <string name="gobacktomenu">GoBackToMenu</string>
    <string name="tlist">\tList</string>
    <string name="_1_n_n2_n_n3_n_n4_n_n5">1. \n\n2. \n\n3. \n\n4. \n\n5.</string>
    <string name="note_1">Note 1</string>
    <string name="add_notes1">ADD NOTES</string>
    <string name="note_2">Note 2</string>
    <string name="note_3">Note 3</string>
    <string name="note_4">Note 4</string>
    <string name="delete">Delete</string>
    <string name="delete1">Delete</string>
    <string name="delete2">Delete</string>
    <string name="delete3">Delete</string>
    <string name="delete4">Delete</string>
    <string name="note_5">Note 5</string>
    <string name="notes">NOTES</string>
    <string name="search_notes">SEARCH NOTES</string>
    <string name="note_title">Note Title</string>
    <string name="type_note_here">TYPE NOTE HERE</string>
    <string name="note_subtitle">NOTE SUBTITLE</string>
    <string name="due_date">DUE DATE:</string>
    <string name="textview">TextView</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="delete_note">Delete Note</string>
    <string name="pick_color">pick color</string>
    <string name="delete_note1">Delete Note</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note2">Delete Note</string>
    <string name="are_you_sure_to_delete_this_note">Are you sure to delete this note?</string>
    <string name="delete_note3">Delete Note</string>
    <string name="see_what_you_have_to_do_now">See what you have to do now?</string>
    <string name="to_do_list">To Do List</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>