<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scholarship.ADDScholarship"
    android:background="@color/cardview_dark_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="47dp"
        android:layout_height="54dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_of_grada"
        tools:ignore="ImageContrastCheck" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/details_of_scholarship"
            android:textAlignment="center"
            android:textColor="#D7CCC8"
            android:textSize="30sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ScholarshipName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/scholarship_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etScholar"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/cardview_light_background"
        android:hint="Type here...."
        android:textColorHint="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScholarshipName" />

    <TextView
        android:id="@+id/ClosingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/closing_date"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etScholar" />

    <EditText
        android:id="@+id/etClsosingDate"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/cardview_light_background"
        android:hint="Type here......"
        android:textColorHint="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClosingDate" />

    <TextView
        android:id="@+id/URLLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/url"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClsosingDate" />

    <EditText
        android:id="@+id/etURL"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/cardview_light_background"
        android:hint="Type here"
        android:textColorHint="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URLLink" />

    <TextView
        android:id="@+id/AboutScholar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/about_schorlarship"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etURL" />

    <EditText
        android:id="@+id/etAboutScholar"
        android:layout_width="321dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:hint="Write in point form "
        android:textColorHint="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutScholar" />

    <Button
        android:id="@+id/btnADD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Add your scholarship"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAboutScholar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="452dp"
        android:layout_height="101dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scholarship" />

</androidx.constraintlayout.widget.ConstraintLayout>